--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -37,15 +37,15 @@ header:
     align: r
     show_logo: true
     show_language: false
-    show_day_night: true
-    show_search: true
+    show_day_night: false
+    show_search: false
     highlight_active_link: false
 
 # Site footer
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Antonino Malacrinò. This work is licensed under {license}'
     license:
       enable: true
       allow_derivatives: false
