--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,6 +4,9 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
+  - name: Project
+    url: project_description
+    weight: 10
   - name: News
     url: post
     weight: 20
